tests/should_fail/syntax_field_on_non_struct.nv
module main

// SHOULD FAIL: struct field access on a non-struct (plain Int)
fn get(x: Int) -> Int {
    return x.nonexistent
}
println(get(5))
